# geerthi_countrify

./: pyproject.toml  pyproject.toml.save
backup_folders/: eventstore_update_version_uuid.py  query_data.py
customer_details/: basic_details.py  data_api.py
eventstore/: pyproject.toml
eventstore/backup_folders/: base.py  database.py  db_connection.py  eventstore_update_version.py
eventstore/eventstoreapi/: api.py  config.py  db_connection.py  eventstore_api.py  main.py
eventstore/eventstoreapi/infrastructure/: base.py  mysql.py  sqlite.py
eventstore/eventstoreapi/lib/: database.py  db_connection.py  util.py
eventstoreapi/: config.py  eventstore_api.py
